--- a/contact/index.html
+++ b/contact/index.html
@@ -14,22 +14,22 @@
   <meta name="theme-color" content="#ffffff">
   <meta name="msapplication-TileColor" content="#ffffff">
 
-  <link rel="icon" type="image/png" sizes="32x27" href="../static/images/ico/favicon.png?v=sjf9h9sx">
+  <link rel="icon" type="image/png" sizes="32x27" href="../static/images/ico/favicon.png?v=mal1imp3">
 
-  <link rel="icon" type="image/png" sizes="32x27" href="../static/images/ico/favicon.png?v=sjf9h9sx">
+  <link rel="icon" type="image/png" sizes="32x27" href="../static/images/ico/favicon.png?v=mal1imp3">
 
-  <link rel="icon" type="image/png" sizes="147x124" href="../static/images/ico/apple-touch.png?v=sjf9h9sx">
+  <link rel="icon" type="image/png" sizes="147x124" href="../static/images/ico/apple-touch.png?v=mal1imp3">
 
-  <link rel="icon" type="image/png" sizes="147x124" href="../static/images/ico/apple-touch.png?v=sjf9h9sx">
+  <link rel="icon" type="image/png" sizes="147x124" href="../static/images/ico/apple-touch.png?v=mal1imp3">
 
   <link rel="stylesheet" id="latulipe-fonts-css" href="//fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700&amp;family=Crimson%20Text:ital,wght@0,400;0,600;1,400;1,600&amp;display=swap" media="all">
 
-  <link rel="stylesheet" href="../static/lib/bootstrap-5.3.0/css/bootstrap.min.css?v=sjf9h9sx">
-  <link rel="stylesheet" href="../static/lib/fontawesome-free-5.15.4-web/css/all.min.css?v=sjf9h9sx">
-  <link rel="stylesheet" href="../static/styles/style.css?v=sjf9h9sx">
-  <script src="../static/js/jquery-3.7.0.min.js?v=sjf9h9sx"></script>
-  <script src="../static/js/popper.min.js?v=sjf9h9sx"></script>
-  <script src="../static/lib/bootstrap-5.3.0/js/bootstrap.min.js?v=sjf9h9sx"></script>
+  <link rel="stylesheet" href="../static/lib/bootstrap-5.3.0/css/bootstrap.min.css?v=mal1imp3">
+  <link rel="stylesheet" href="../static/lib/fontawesome-free-5.15.4-web/css/all.min.css?v=mal1imp3">
+  <link rel="stylesheet" href="../static/styles/style.css?v=mal1imp3">
+  <script src="../static/js/jquery-3.7.0.min.js?v=mal1imp3"></script>
+  <script src="../static/js/popper.min.js?v=mal1imp3"></script>
+  <script src="../static/lib/bootstrap-5.3.0/js/bootstrap.min.js?v=mal1imp3"></script>
   <title>Crazy About Colours Painters &amp; Decorators</title>
 
 </head>
@@ -42,7 +42,7 @@
     <nav class="navbar navbar-dark navbar-expand-lg header-navbar">
       <div class="container">
         <a class="navbar-brand" href="../" title="Crazy About Colours Painters &amp; Decorators">
-          <img src="../static/images/logo.png?v=sjf9h9sx" alt="Crazy About Colours Painters &amp; Decorators">
+          <img src="../static/images/logo.png?v=mal1imp3" alt="Crazy About Colours Painters &amp; Decorators">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -137,7 +137,7 @@
           <p>From new homes to renovations, Crazy About Colours are the experts. We take great pride in our house painting and only use premium quality, environmentally friendly products.</p>
 
           <a href="../" title="Crazy About Colours Painters &amp; Decorators">
-            <img src="../static/images/logo.png?v=sjf9h9sx" alt="Crazy About Colours Painters &amp; Decorators">
+            <img src="../static/images/logo.png?v=mal1imp3" alt="Crazy About Colours Painters &amp; Decorators">
           </a>
         </div>
         <div class="col-md-4">
@@ -189,9 +189,9 @@
     </svg>
   </div>
 
-  <script src="../static/js/main.js?v=sjf9h9sx"></script>
+  <script src="../static/js/main.js?v=mal1imp3"></script>
 
-  <script src="../static/js/main.js?v=sjf9h9sx"></script>
+  <script src="../static/js/main.js?v=mal1imp3"></script>
 </body>
 
 </html>
