--- a/menu/index.html
+++ b/menu/index.html
@@ -14,22 +14,22 @@
   <meta name="theme-color" content="#ffffff">
   <meta name="msapplication-TileColor" content="#ffffff">
 
-  <link rel="icon" type="image/png" sizes="32x27" href="../static/images/ico/favicon.png?v=sjf9h9sx">
+  <link rel="icon" type="image/png" sizes="32x27" href="../static/images/ico/favicon.png?v=mal1imp3">
 
-  <link rel="icon" type="image/png" sizes="32x27" href="../static/images/ico/favicon.png?v=sjf9h9sx">
+  <link rel="icon" type="image/png" sizes="32x27" href="../static/images/ico/favicon.png?v=mal1imp3">
 
-  <link rel="icon" type="image/png" sizes="147x124" href="../static/images/ico/apple-touch.png?v=sjf9h9sx">
+  <link rel="icon" type="image/png" sizes="147x124" href="../static/images/ico/apple-touch.png?v=mal1imp3">
 
-  <link rel="icon" type="image/png" sizes="147x124" href="../static/images/ico/apple-touch.png?v=sjf9h9sx">
+  <link rel="icon" type="image/png" sizes="147x124" href="../static/images/ico/apple-touch.png?v=mal1imp3">
 
   <link rel="stylesheet" id="latulipe-fonts-css" href="//fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700&amp;family=Crimson%20Text:ital,wght@0,400;0,600;1,400;1,600&amp;display=swap" media="all">
 
-  <link rel="stylesheet" href="../static/lib/bootstrap-5.3.0/css/bootstrap.min.css?v=sjf9h9sx">
-  <link rel="stylesheet" href="../static/lib/fontawesome-free-5.15.4-web/css/all.min.css?v=sjf9h9sx">
-  <link rel="stylesheet" href="../static/styles/style.css?v=sjf9h9sx">
-  <script src="../static/js/jquery-3.7.0.min.js?v=sjf9h9sx"></script>
-  <script src="../static/js/popper.min.js?v=sjf9h9sx"></script>
-  <script src="../static/lib/bootstrap-5.3.0/js/bootstrap.min.js?v=sjf9h9sx"></script>
+  <link rel="stylesheet" href="../static/lib/bootstrap-5.3.0/css/bootstrap.min.css?v=mal1imp3">
+  <link rel="stylesheet" href="../static/lib/fontawesome-free-5.15.4-web/css/all.min.css?v=mal1imp3">
+  <link rel="stylesheet" href="../static/styles/style.css?v=mal1imp3">
+  <script src="../static/js/jquery-3.7.0.min.js?v=mal1imp3"></script>
+  <script src="../static/js/popper.min.js?v=mal1imp3"></script>
+  <script src="../static/lib/bootstrap-5.3.0/js/bootstrap.min.js?v=mal1imp3"></script>
   <title>Crazy About Colours Painters &amp; Decorators</title>
 
 </head>
@@ -101,7 +101,7 @@
             <div class="col-md-6 d-flex">
               <div class="menu-item">
                 <div class="menu-item-img">
-                  <img src="../static/images/home/menu/1.jpg?v=dtmi8le9&v=sjf9h9sx" alt>
+                  <img src="../static/images/home/menu/1.jpg?v=dtmi8le9&v=mal1imp3" alt>
                 </div>
                 <div class="menu-item-content">
                   <h4 class="menu-item-title">Crispy Chicken Wings</h4>
@@ -113,7 +113,7 @@
             <div class="col-md-6 d-flex">
               <div class="menu-item">
                 <div class="menu-item-img">
-                  <img src="../static/images/home/menu/6.jpg?v=dtmi8le9&v=sjf9h9sx" alt>
+                  <img src="../static/images/home/menu/6.jpg?v=dtmi8le9&v=mal1imp3" alt>
                 </div>
                 <div class="menu-item-content">
                   <h4 class="menu-item-title">Crispy Chicken Wings</h4>
@@ -125,7 +125,7 @@
             <div class="col-md-6 d-flex">
               <div class="menu-item">
                 <div class="menu-item-img">
-                  <img src="../static/images/home/menu/2.jpg?v=dtmi8le9&v=sjf9h9sx" alt>
+                  <img src="../static/images/home/menu/2.jpg?v=dtmi8le9&v=mal1imp3" alt>
                 </div>
                 <div class="menu-item-content">
                   <h4 class="menu-item-title">Crispy Chicken Wings</h4>
@@ -137,7 +137,7 @@
             <div class="col-md-6 d-flex">
               <div class="menu-item">
                 <div class="menu-item-img">
-                  <img src="../static/images/home/menu/3.jpg?v=dtmi8le9&v=sjf9h9sx" alt>
+                  <img src="../static/images/home/menu/3.jpg?v=dtmi8le9&v=mal1imp3" alt>
                 </div>
                 <div class="menu-item-content">
                   <h4 class="menu-item-title">Crispy Chicken Wings</h4>
@@ -149,7 +149,7 @@
             <div class="col-md-6 d-flex">
               <div class="menu-item">
                 <div class="menu-item-img">
-                  <img src="../static/images/home/menu/4.jpg?v=dtmi8le9&v=sjf9h9sx" alt>
+                  <img src="../static/images/home/menu/4.jpg?v=dtmi8le9&v=mal1imp3" alt>
                 </div>
                 <div class="menu-item-content">
                   <h4 class="menu-item-title">Crispy Chicken Wings</h4>
@@ -161,7 +161,7 @@
             <div class="col-md-6 d-flex">
               <div class="menu-item">
                 <div class="menu-item-img">
-                  <img src="../static/images/home/menu/5.jpg?v=dtmi8le9&v=sjf9h9sx" alt>
+                  <img src="../static/images/home/menu/5.jpg?v=dtmi8le9&v=mal1imp3" alt>
                 </div>
                 <div class="menu-item-content">
                   <h4 class="menu-item-title">Crispy Chicken Wings</h4>
@@ -177,7 +177,7 @@
             <div class="col-md-6 d-flex">
               <div class="menu-item">
                 <div class="menu-item-img">
-                  <img src="../static/images/home/menu/1.jpg?v=dtmi8le9&v=sjf9h9sx" alt>
+                  <img src="../static/images/home/menu/1.jpg?v=dtmi8le9&v=mal1imp3" alt>
                 </div>
                 <div class="menu-item-content">
                   <h4 class="menu-item-title">Crispy Chicken Wings</h4>
@@ -189,7 +189,7 @@
             <div class="col-md-6 d-flex">
               <div class="menu-item">
                 <div class="menu-item-img">
-                  <img src="../static/images/home/menu/6.jpg?v=dtmi8le9&v=sjf9h9sx" alt>
+                  <img src="../static/images/home/menu/6.jpg?v=dtmi8le9&v=mal1imp3" alt>
                 </div>
                 <div class="menu-item-content">
                   <h4 class="menu-item-title">Crispy Chicken Wings</h4>
@@ -201,7 +201,7 @@
             <div class="col-md-6 d-flex">
               <div class="menu-item">
                 <div class="menu-item-img">
-                  <img src="../static/images/home/menu/2.jpg?v=dtmi8le9&v=sjf9h9sx" alt>
+                  <img src="../static/images/home/menu/2.jpg?v=dtmi8le9&v=mal1imp3" alt>
                 </div>
                 <div class="menu-item-content">
                   <h4 class="menu-item-title">Crispy Chicken Wings</h4>
@@ -213,7 +213,7 @@
             <div class="col-md-6 d-flex">
               <div class="menu-item">
                 <div class="menu-item-img">
-                  <img src="../static/images/home/menu/3.jpg?v=dtmi8le9&v=sjf9h9sx" alt>
+                  <img src="../static/images/home/menu/3.jpg?v=dtmi8le9&v=mal1imp3" alt>
                 </div>
                 <div class="menu-item-content">
                   <h4 class="menu-item-title">Crispy Chicken Wings</h4>
@@ -225,7 +225,7 @@
             <div class="col-md-6 d-flex">
               <div class="menu-item">
                 <div class="menu-item-img">
-                  <img src="../static/images/home/menu/4.jpg?v=dtmi8le9&v=sjf9h9sx" alt>
+                  <img src="../static/images/home/menu/4.jpg?v=dtmi8le9&v=mal1imp3" alt>
                 </div>
                 <div class="menu-item-content">
                   <h4 class="menu-item-title">Crispy Chicken Wings</h4>
@@ -237,7 +237,7 @@
             <div class="col-md-6 d-flex">
               <div class="menu-item">
                 <div class="menu-item-img">
-                  <img src="../static/images/home/menu/5.jpg?v=dtmi8le9&v=sjf9h9sx" alt>
+                  <img src="../static/images/home/menu/5.jpg?v=dtmi8le9&v=mal1imp3" alt>
                 </div>
                 <div class="menu-item-content">
                   <h4 class="menu-item-title">Crispy Chicken Wings</h4>
@@ -253,7 +253,7 @@
             <div class="col-md-6 d-flex">
               <div class="menu-item">
                 <div class="menu-item-img">
-                  <img src="../static/images/home/menu/1.jpg?v=dtmi8le9&v=sjf9h9sx" alt>
+                  <img src="../static/images/home/menu/1.jpg?v=dtmi8le9&v=mal1imp3" alt>
                 </div>
                 <div class="menu-item-content">
                   <h4 class="menu-item-title">Crispy Chicken Wings</h4>
@@ -265,7 +265,7 @@
             <div class="col-md-6 d-flex">
               <div class="menu-item">
                 <div class="menu-item-img">
-                  <img src="../static/images/home/menu/6.jpg?v=dtmi8le9&v=sjf9h9sx" alt>
+                  <img src="../static/images/home/menu/6.jpg?v=dtmi8le9&v=mal1imp3" alt>
                 </div>
                 <div class="menu-item-content">
                   <h4 class="menu-item-title">Crispy Chicken Wings</h4>
@@ -277,7 +277,7 @@
             <div class="col-md-6 d-flex">
               <div class="menu-item">
                 <div class="menu-item-img">
-                  <img src="../static/images/home/menu/2.jpg?v=dtmi8le9&v=sjf9h9sx" alt>
+                  <img src="../static/images/home/menu/2.jpg?v=dtmi8le9&v=mal1imp3" alt>
                 </div>
                 <div class="menu-item-content">
                   <h4 class="menu-item-title">Crispy Chicken Wings</h4>
@@ -289,7 +289,7 @@
             <div class="col-md-6 d-flex">
               <div class="menu-item">
                 <div class="menu-item-img">
-                  <img src="../static/images/home/menu/3.jpg?v=dtmi8le9&v=sjf9h9sx" alt>
+                  <img src="../static/images/home/menu/3.jpg?v=dtmi8le9&v=mal1imp3" alt>
                 </div>
                 <div class="menu-item-content">
                   <h4 class="menu-item-title">Crispy Chicken Wings</h4>
@@ -301,7 +301,7 @@
             <div class="col-md-6 d-flex">
               <div class="menu-item">
                 <div class="menu-item-img">
-                  <img src="../static/images/home/menu/4.jpg?v=dtmi8le9&v=sjf9h9sx" alt>
+                  <img src="../static/images/home/menu/4.jpg?v=dtmi8le9&v=mal1imp3" alt>
                 </div>
                 <div class="menu-item-content">
                   <h4 class="menu-item-title">Crispy Chicken Wings</h4>
@@ -313,7 +313,7 @@
             <div class="col-md-6 d-flex">
               <div class="menu-item">
                 <div class="menu-item-img">
-                  <img src="../static/images/home/menu/5.jpg?v=dtmi8le9&v=sjf9h9sx" alt>
+                  <img src="../static/images/home/menu/5.jpg?v=dtmi8le9&v=mal1imp3" alt>
                 </div>
                 <div class="menu-item-content">
                   <h4 class="menu-item-title">Crispy Chicken Wings</h4>
@@ -329,7 +329,7 @@
             <div class="col-md-6 d-flex">
               <div class="menu-item">
                 <div class="menu-item-img">
-                  <img src="../static/images/home/menu/1.jpg?v=dtmi8le9&v=sjf9h9sx" alt>
+                  <img src="../static/images/home/menu/1.jpg?v=dtmi8le9&v=mal1imp3" alt>
                 </div>
                 <div class="menu-item-content">
                   <h4 class="menu-item-title">Crispy Chicken Wings</h4>
@@ -341,7 +341,7 @@
             <div class="col-md-6 d-flex">
               <div class="menu-item">
                 <div class="menu-item-img">
-                  <img src="../static/images/home/menu/6.jpg?v=dtmi8le9&v=sjf9h9sx" alt>
+                  <img src="../static/images/home/menu/6.jpg?v=dtmi8le9&v=mal1imp3" alt>
                 </div>
                 <div class="menu-item-content">
                   <h4 class="menu-item-title">Crispy Chicken Wings</h4>
@@ -353,7 +353,7 @@
             <div class="col-md-6 d-flex">
               <div class="menu-item">
                 <div class="menu-item-img">
-                  <img src="../static/images/home/menu/2.jpg?v=dtmi8le9&v=sjf9h9sx" alt>
+                  <img src="../static/images/home/menu/2.jpg?v=dtmi8le9&v=mal1imp3" alt>
                 </div>
                 <div class="menu-item-content">
                   <h4 class="menu-item-title">Crispy Chicken Wings</h4>
@@ -365,7 +365,7 @@
             <div class="col-md-6 d-flex">
               <div class="menu-item">
                 <div class="menu-item-img">
-                  <img src="../static/images/home/menu/3.jpg?v=dtmi8le9&v=sjf9h9sx" alt>
+                  <img src="../static/images/home/menu/3.jpg?v=dtmi8le9&v=mal1imp3" alt>
                 </div>
                 <div class="menu-item-content">
                   <h4 class="menu-item-title">Crispy Chicken Wings</h4>
@@ -377,7 +377,7 @@
             <div class="col-md-6 d-flex">
               <div class="menu-item">
                 <div class="menu-item-img">
-                  <img src="../static/images/home/menu/4.jpg?v=dtmi8le9&v=sjf9h9sx" alt>
+                  <img src="../static/images/home/menu/4.jpg?v=dtmi8le9&v=mal1imp3" alt>
                 </div>
                 <div class="menu-item-content">
                   <h4 class="menu-item-title">Crispy Chicken Wings</h4>
@@ -389,7 +389,7 @@
             <div class="col-md-6 d-flex">
               <div class="menu-item">
                 <div class="menu-item-img">
-                  <img src="../static/images/home/menu/5.jpg?v=dtmi8le9&v=sjf9h9sx" alt>
+                  <img src="../static/images/home/menu/5.jpg?v=dtmi8le9&v=mal1imp3" alt>
                 </div>
                 <div class="menu-item-content">
                   <h4 class="menu-item-title">Crispy Chicken Wings</h4>
@@ -437,7 +437,7 @@
           <p>From new homes to renovations, Crazy About Colours are the experts. We take great pride in our house painting and only use premium quality, environmentally friendly products.</p>
 
           <a href="../" title="Crazy About Colours Painters &amp; Decorators">
-            <img src="../static/images/logo.png?v=sjf9h9sx" alt="Crazy About Colours Painters &amp; Decorators">
+            <img src="../static/images/logo.png?v=mal1imp3" alt="Crazy About Colours Painters &amp; Decorators">
           </a>
         </div>
         <div class="col-md-4">
@@ -489,9 +489,9 @@
     </svg>
   </div>
 
-  <script src="../static/js/main.js?v=sjf9h9sx"></script>
+  <script src="../static/js/main.js?v=mal1imp3"></script>
 
-  <script src="../static/js/main.js?v=sjf9h9sx"></script>
+  <script src="../static/js/main.js?v=mal1imp3"></script>
 </body>
 
 </html>
