--- a/index.html
+++ b/index.html
@@ -14,22 +14,22 @@
   <meta name="theme-color" content="#ffffff">
   <meta name="msapplication-TileColor" content="#ffffff">
 
-  <link rel="icon" type="image/png" sizes="32x27" href="./static/images/ico/favicon.png?v=sjf9h9sx">
+  <link rel="icon" type="image/png" sizes="32x27" href="./static/images/ico/favicon.png?v=mal1imp3">
 
-  <link rel="icon" type="image/png" sizes="32x27" href="./static/images/ico/favicon.png?v=sjf9h9sx">
+  <link rel="icon" type="image/png" sizes="32x27" href="./static/images/ico/favicon.png?v=mal1imp3">
 
-  <link rel="icon" type="image/png" sizes="147x124" href="./static/images/ico/apple-touch.png?v=sjf9h9sx">
+  <link rel="icon" type="image/png" sizes="147x124" href="./static/images/ico/apple-touch.png?v=mal1imp3">
 
-  <link rel="icon" type="image/png" sizes="147x124" href="./static/images/ico/apple-touch.png?v=sjf9h9sx">
+  <link rel="icon" type="image/png" sizes="147x124" href="./static/images/ico/apple-touch.png?v=mal1imp3">
 
   <link rel="stylesheet" id="latulipe-fonts-css" href="//fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700&amp;family=Crimson%20Text:ital,wght@0,400;0,600;1,400;1,600&amp;display=swap" media="all">
 
-  <link rel="stylesheet" href="./static/lib/bootstrap-5.3.0/css/bootstrap.min.css?v=sjf9h9sx">
-  <link rel="stylesheet" href="./static/lib/fontawesome-free-5.15.4-web/css/all.min.css?v=sjf9h9sx">
-  <link rel="stylesheet" href="./static/styles/style.css?v=sjf9h9sx">
-  <script src="./static/js/jquery-3.7.0.min.js?v=sjf9h9sx"></script>
-  <script src="./static/js/popper.min.js?v=sjf9h9sx"></script>
-  <script src="./static/lib/bootstrap-5.3.0/js/bootstrap.min.js?v=sjf9h9sx"></script>
+  <link rel="stylesheet" href="./static/lib/bootstrap-5.3.0/css/bootstrap.min.css?v=mal1imp3">
+  <link rel="stylesheet" href="./static/lib/fontawesome-free-5.15.4-web/css/all.min.css?v=mal1imp3">
+  <link rel="stylesheet" href="./static/styles/style.css?v=mal1imp3">
+  <script src="./static/js/jquery-3.7.0.min.js?v=mal1imp3"></script>
+  <script src="./static/js/popper.min.js?v=mal1imp3"></script>
+  <script src="./static/lib/bootstrap-5.3.0/js/bootstrap.min.js?v=mal1imp3"></script>
   <title>Crazy About Colours Painters &amp; Decorators</title>
 
 </head>
@@ -42,7 +42,7 @@
     <nav class="navbar navbar-dark navbar-expand-lg header-navbar">
       <div class="container">
         <a class="navbar-brand" href="./" title="Crazy About Colours Painters &amp; Decorators">
-          <img src="./static/images/logo.png?v=sjf9h9sx" alt="Crazy About Colours Painters &amp; Decorators">
+          <img src="./static/images/logo.png?v=mal1imp3" alt="Crazy About Colours Painters &amp; Decorators">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -120,7 +120,7 @@
           </div>
         </div>
         <div class="col-md-6">
-          <img class="w-100" src="./static/images/home/carousel/right.jpg?v=sjf9h9sx" alt>
+          <img class="w-100" src="./static/images/home/carousel/right.jpg?v=mal1imp3" alt>
         </div>
       </div>
     </div>
@@ -141,7 +141,7 @@
           </div>
         </div>
         <div class="col-md-4">
-          <img class="w-100" src="./static/images/home/section-about.jpg?v=sjf9h9sx" alt>
+          <img class="w-100" src="./static/images/home/section-about.jpg?v=mal1imp3" alt>
         </div>
       </div>
     </div>
@@ -153,7 +153,7 @@
         <div class="col-md-4">
           <div class="choose-item">
             <div class="thumb">
-              <img src="./static/images/home/choose/1.jpg?v=sjf9h9sx" alt>
+              <img src="./static/images/home/choose/1.jpg?v=mal1imp3" alt>
             </div>
           </div>
         </div>
@@ -161,7 +161,7 @@
         <div class="col-md-4">
           <div class="choose-item">
             <div class="thumb">
-              <img src="./static/images/home/choose/3.jpg?v=sjf9h9sx" alt>
+              <img src="./static/images/home/choose/3.jpg?v=mal1imp3" alt>
             </div>
           </div>
         </div>
@@ -175,13 +175,13 @@
       </div>
       <div class="row gy-4 choose-partner">
         <div class="col-md-4 text-center">
-          <img src="./static/images/partner/1.jpg?v=sjf9h9sx" alt="dulux">
+          <img src="./static/images/partner/1.jpg?v=mal1imp3" alt="dulux">
         </div>
         <div class="col-md-4 text-center">
-          <img src="./static/images/partner/2.jpg?v=sjf9h9sx" alt="wattyl">
+          <img src="./static/images/partner/2.jpg?v=mal1imp3" alt="wattyl">
         </div>
         <div class="col-md-4 text-center">
-          <img src="./static/images/partner/3.jpg?v=sjf9h9sx" alt="haymes">
+          <img src="./static/images/partner/3.jpg?v=mal1imp3" alt="haymes">
         </div>
       </div>
       <div class="row gy-4 choose-tag">
@@ -218,27 +218,22 @@
         <div class="col-md-4">
           <div class="list-item">
             <div class="list-item-thumb">
-              <img src="./static/images/gallery/1.jpg?v=sjf9h9sx" alt>
+              <img src="./static/images/gallery/1.jpg?v=mal1imp3" alt>
             </div>
-            <div class="list-item-tag">1 May</div>
           </div>
         </div>
         <div class="col-md-4">
           <div class="list-item">
             <div class="list-item-thumb">
-              <img src="./static/images/gallery/2.jpg?v=sjf9h9sx" alt>
+              <img src="./static/images/gallery/2.jpg?v=mal1imp3" alt>
             </div>
-
-            <div class="list-item-tag">1 May</div>
           </div>
         </div>
         <div class="col-md-4">
           <div class="list-item">
             <div class="list-item-thumb">
-              <img src="./static/images/gallery/3.jpg?v=sjf9h9sx" alt>
+              <img src="./static/images/gallery/3.jpg?v=mal1imp3" alt>
             </div>
-
-            <div class="list-item-tag">1 May</div>
           </div>
         </div>
       </div>
@@ -333,7 +328,7 @@
           <p>From new homes to renovations, Crazy About Colours are the experts. We take great pride in our house painting and only use premium quality, environmentally friendly products.</p>
 
           <a href="./" title="Crazy About Colours Painters &amp; Decorators">
-            <img src="./static/images/logo.png?v=sjf9h9sx" alt="Crazy About Colours Painters &amp; Decorators">
+            <img src="./static/images/logo.png?v=mal1imp3" alt="Crazy About Colours Painters &amp; Decorators">
           </a>
         </div>
         <div class="col-md-4">
@@ -385,7 +380,7 @@
     </svg>
   </div>
 
-  <script src="./static/js/main.js?v=sjf9h9sx"></script>
+  <script src="./static/js/main.js?v=mal1imp3"></script>
 
 </body>
 
